--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -19,10 +19,14 @@ actix-service = "2.0.0-beta.4"
 actix-web = { version = "4.0.0-beta.4", features = ["rustls", "cookies"] }
 anyhow = "1.0.36"
 async-compression = { version = "0.3.6", features = ["gzip", "tokio-02"] }
+async-stream = "0.3.0"
+async-trait = "0.1.42"
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 bytes = "0.6.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 crossbeam-channel = "0.5.0"
+dashmap = "4.0.2"
+either = "1.6.1"
 env_logger = "0.8.2"
 flate2 = "1.0.19"
 fst = "0.4.5"
@@ -32,6 +36,7 @@ grenad = { git = "https://github.com/Kerollmops/grenad.git", rev = "3adcb26" }
 heed = "0.10.6"
 http = "0.2.1"
 indexmap =  { version = "1.3.2", features = ["serde-1"] }
+itertools = "0.10.0"
 log = "0.4.8"
 main_error = "0.1.0"
 meilisearch-error = { path = "../meilisearch-error" }
@@ -40,6 +45,7 @@ memmap = "0.7.0"
 milli = { git = "https://github.com/meilisearch/milli.git", rev = "b7b23cd" }
 mime = "0.3.16"
 once_cell = "1.5.2"
+parking_lot = "0.11.1"
 rand = "0.7.3"
 rayon = "1.5.0"
 regex = "1.4.2"
@@ -52,19 +58,22 @@ slice-group-by = "0.2.6"
 structopt = "0.3.20"
 tar = "0.4.29"
 tempfile = "3.1.0"
-tokio = { version = "1", features = ["full"] }
-dashmap = "4.0.2"
-uuid = "0.8.2"
-itertools = "0.10.0"
-either = "1.6.1"
-async-trait = "0.1.42"
 thiserror = "1.0.24"
-async-stream = "0.3.0"
-parking_lot = "0.11.1"
+tokio = { version = "1", features = ["full"] }
+uuid = "0.8.2"
 
 [dependencies.sentry]
 default-features = false
-features = ["with_client_implementation", "with_panic", "with_failure", "with_device_info", "with_rust_info", "with_reqwest_transport", "with_rustls", "with_env_logger"]
+features = [
+  "with_client_implementation",
+  "with_panic",
+  "with_failure",
+  "with_device_info",
+  "with_rust_info",
+  "with_reqwest_transport",
+  "with_rustls",
+  "with_env_logger"
+]
 optional = true
 version = "0.18.1"
 
