--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -63,6 +63,7 @@ tokio = { version = "1", features = ["full"] }
 uuid = "0.8.2"
 oxidized-json-checker = "0.3.2"
 walkdir = "2.3.2"
+obkv = "0.1.1"
 
 [dependencies.sentry]
 default-features = false
