--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -84,6 +84,7 @@ version = "0.18.1"
 actix-rt = "2.1.0"
 assert-json-diff = { branch = "master", git = "https://github.com/qdequele/assert-json-diff" }
 mockall = "0.9.1"
+paste = "1.0.5"
 serde_url_params = "0.2.0"
 tempdir = "0.3.7"
 urlencoding = "1.1.1"
