--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -10,7 +10,13 @@ name = "meilisearch"
 path = "src/main.rs"
 
 [build-dependencies]
+anyhow = "*"
+cargo_toml = "0.9.0"
+hex = "0.4.3"
+reqwest = { version = "0.11.3", features = ["blocking", "rustls-tls"], default-features = false}
+sha-1 = "0.9.4"
 vergen = "3.1.0"
+zip = "0.5.12"
 
 [dependencies]
 actix-cors = "0.6.0-beta.1"
@@ -96,3 +102,7 @@ default = ["sentry"]
 
 [target.'cfg(target_os = "linux")'.dependencies]
 jemallocator = "0.3.2"
+
+[package.metadata.mini-dashboard]
+assets-url = "https://github.com/meilisearch/mini-dashboard/releases/download/v0.1.0/build.zip"
+sha1 = "abb7bd8765b9fab38675958bc9d06088589c712c"
