--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,11 @@ jobs:
         os: [ubuntu-18.04, macos-latest]
     steps:
     - uses: actions/checkout@v2
+    - name: Run cargo check without any default features
+      uses: actions-rs/cargo@v1
+      with:
+        command: check
+        args: --no-default-features
     - name: Run cargo test
       uses: actions-rs/cargo@v1
       with:
@@ -28,15 +33,20 @@ jobs:
         args: --locked --release
 
   # We don't run test on Windows since we get the following error: There is not enough space on the disk.
-  build-on-windows:
-    name: Build on windows-latest
+  check-on-windows:
+    name: Cargo check on Windows
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Run cargo test
+    - name: Run cargo check without any default features
       uses: actions-rs/cargo@v1
       with:
-        command: build
+        command: check
+        args: --no-default-features
+    - name: Run cargo check with all default features
+      uses: actions-rs/cargo@v1
+      with:
+        command: check
 
   clippy:
     name: Run Clippy
