--- a/bors.toml
+++ b/bors.toml
@@ -1,7 +1,7 @@
 status = [
     'Tests on ubuntu-18.04',
     'Tests on macos-latest',
-    'Build on windows-latest',
+    'Cargo check on Windows',
     'Run Clippy'
 ]
 # 3 hours timeout
