--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Continuous integration
 
 on:
   push:
-    branches: [ main, staging, trying ]
+    branches: [ staging, trying ]
   pull_request:
     branches: [ main ]
 
