--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,11 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         with:
+          command: check
+          args: --all
+
+      - uses: actions-rs/cargo@v1
+        with:
           command: build
 
       - uses: actions-rs/cargo@v1
