--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ debug = true
 [profile.bench]
 debug = true
 
-# Set the settings for build scripts and proc-macros.
+# Make sure that the build scripts and proc-macros are compiled with
+# all the optimizations. It speeds up the zip crate that we use in the build.rs.
 [profile.dev.build-override]
 opt-level = 3
 [profile.release.build-override]
