--- a/.github/workflows/flaky.yml
+++ b/.github/workflows/flaky.yml
@@ -1,15 +1,15 @@
-name: "Look for flaky tests"
+name: Look for flaky tests
 on:
   schedule:
     - cron: "* */12 * * */5" # every friday at 12PM
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@v1
-    - name: "install cargo-flaky"
+    - uses: actions/checkout@v2
+    - name: Install cargo-flaky
       run: cargo install cargo-flaky
-    - name: "Run cargo flaky 1000 times"
+    - name: Run cargo flaky 1000 times
       run: cargo flaky -i 1000
