--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -27,7 +27,7 @@ actix-http = { version = "=3.0.0-beta.6" }
 actix-service = "2.0.0"
 actix-web = { version = "=4.0.0-beta.6", features = ["rustls"] }
 actix-web-static-files = { git = "https://github.com/MarinPostma/actix-web-static-files.git", rev = "6db8c3e", optional = true }
-anyhow = "1.0.36"
+#anyhow = "1.0.36"
 async-stream = "0.3.0"
 async-trait = "0.1.42"
 arc-swap = "1.2.0"
